argocd/infra/traefik-app-routes/adguard-route.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: adguard-redirect-https
  namespace: adguard-home
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-http
  namespace: adguard-home
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`adguard.donethanks.com`)
      middlewares:
        - name: adguard-redirect-https
      services:
        - name: adguard-home
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-https
  namespace: adguard-home
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`adguard.donethanks.com`) && PathPrefix(`/oauth2`)
      services:
        - name: adguard-oauth2-proxy
          port: 4180
    - kind: Rule
      match: Host(`adguard.donethanks.com`)
      services:
        - name: adguard-oauth2-proxy
          port: 4180
