argocd/infra/traefik-app-routes/argocd-route.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-redirect-https
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-http
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argo.donethanks.com`)
      middlewares:
        - name: argocd-redirect-https
      services:
        - name: argocd-server
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-https
  namespace: argocd
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`argo.donethanks.com`)
      services:
        - name: argocd-server
          port: 80
