argocd/infra/traefik-app-routes/bao-route.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: bao-redirect-https
  namespace: openbao
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bao-http
  namespace: openbao
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`bao.donethanks.com`)
      middlewares:
        - name: bao-redirect-https
      services:
        - name: openbao
          port: 8200
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bao-https
  namespace: openbao
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`bao.donethanks.com`)
      services:
        - name: openbao
          port: 8200
